colored blocks, data file to generate blocks' height

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="fontloader.css">-->
 
     <!-- GAME STATES -->
+    <script src="js/data.js"></script>
     <script src="js/loader.js"></script>
     <script src="js/scoreboard.js"></script>
 
